# automata-v0

./: .gitmodules  README.md  commands.md  pyproject.toml
automata_v0/: run_human_eval_solver.py  run_leetcode_hard_solver.py  run_math_problem_solver.py  run_re_run_leetcode_outputs.py  run_re_run_math_outputs.py  run_vanilla_problem_solver.py  utils.py
automata_v0/agent/: agentified_solution_oracle.py  completion_provider.py  constants.py
automata_v0/data/results/humaneval_results/: human_eval_model_eq_gpt-4-0613_temp_eq_0.7_run_mode_eq_advanced_agent_with_interpreter.jsonl
automata_v0/data/results/humaneval_results/gpt_4_0613/: humaneval-py._reflexion_5_gpt-4_pass_at_k_1_py_gpt-4-0613.jsonl
automata_v0/data/results/leetcode_results/gpt_4_0613/: leetcode-hard-py-40-uncontaminated_tests._reflexion_5_gpt-4-0613_pass_at_k_1_py.jsonl  leetcode_hard_py_40__model_eq_gpt_4_0613__temp_eq_0p7__run_mode_eq_advanced-agent-with-py-interpreter.jsonl  leetcode_hard_py_40__model_eq_gpt_4_0613__temp_eq_0p7__run_mode_eq_advanced_agent_with_py_interpreter.jsonl
automata_v0/leetcode_solver/: leetcode_constants.py  leetcode_problem_solver.py  leetcode_problems_loader.py  leetcode_solutions_finder.py
