[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "automata-v0"
version = "0.1.0"
description = "Automata V0."
authors = ["Owen Colegrove <owen@emergentagi.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
automata = { path = "automata_v0/automata" }
leetcode_env = { path = "automata_v0/leetcode_hard_gym" }
python = ">=3.10,<3.12"
black = "^23.3.0"
python-leetcode = "^1.2.1"
bs4 = "^0.0.1"
python-dotenv = "^1.0.0"
pandas = "^2.0.3"
evalplus = "^0.1.6"
gym = "^0.26.2"
torch = "^2.0.1"
transformers = "^4.31.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | automata_v0/leetcode_hard_gym
    | automata_v0/automata
    | automata_v0/reflexion
)/
)
'''

[tool.mypy]
ignore_missing_imports = true
exclude = '(automata_v0/leetcode_hard_gym|automata_v0/automata|automata_v0/reflexion)/'
